# chlorine

./: .air.toml  .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  sqlc.yaml
cmd/chlorine/: main.go
collection/: bruno.json
collection/compat/maloja/: scrobble form.bru  scrobble json - multiple artist track.bru  scrobble json.bru  scrobble query.bru  test json.bru  test query.bru
collections/: Maloja Scrobble.bru  bruno.json
collections/environments/: development.bru
db/: queries.sql  schema.sql
db/migrations/: 20231213040920_initial_schema.sql  atlas.sum
internal/compat/: compat.go  maloja.go
internal/server/: server.go
src/: config.rs  db.rs  extractor.rs  lib.rs  main.rs  maloja.rs  parser.rs  routes.rs
src/compat/: maloja.rs
src/db/: album.rs  artist.rs  scrobble.rs  track.rs
src/routes/: api.rs  filters.rs  main.rs
src/routes/api/: compat.rs
src/routes/api/compat/: maloja.rs
src/routes/main/: artist.rs  index.rs  scrobbles.rs
templates/: artist.html  base.html  index.html  scrobbles.html
views/: index.html
