[package]
name = "chlorine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.9"
deadpool-postgres = "0.14.1"
jiff = "0.1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
slug = "0.1.6"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-jiff-0_1"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
