[package]
name = "chlorine"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.99"
askama = { version = "0.14.0" }
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = { version = "0.8.4", features = ["macros"] }
deadpool-postgres = "0.14.1"
jiff = "0.1.29"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
slug = "0.1.6"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-jiff-0_1"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
